# tic-tac-toe

./: pyproject.toml
tic_tac_toe/: __main__.py
