[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["Arthur Fontaine <0arthur.fontaine@gmail.com>"]
readme = "README.md"
packages = [{include = "tic_tac_toe"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
tic-tac-toe = "tic_tac_toe.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
